<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.isel.poo.li21d.g10.minesweeper.MainActivity">

    <pt.isel.poo.li21d.g10.minesweeper.tile.TilePanel
        android:id="@+id/tilePanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:gridLine="1"
        app:heightTiles="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:widthTiles="12" />

    <Switch
        android:id="@+id/Flag"
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toStartOf="@+id/bombs"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel" />

    <Button
        android:id="@+id/load"
        android:layout_width="110dp"
        android:layout_height="58dp"
        android:layout_marginEnd="4dp"
        android:text="@string/load"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restart"
        app:layout_constraintTop_toBottomOf="@+id/Flag"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/save"
        android:layout_width="98dp"
        android:layout_height="58dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/load"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Flag"
        app:layout_constraintVertical_bias="0.095" />

    <Button
        android:id="@+id/restart"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_marginEnd="4dp"
        android:text="@string/restart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Flag"
        app:layout_constraintVertical_bias="0.096" />

    <TextView
        android:id="@+id/bombs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="68dp"
        android:text="@string/bombs"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toStartOf="@+id/Flag"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel"
        app:srcCompat="@drawable/flag"
        />

    <TextView
        android:id="@+id/numBombs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/_20"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bombs"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel" />

    <TextView
        android:id="@+id/Lmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lmessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel" />

    <TextView
        android:id="@+id/Wmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wmessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/new_game"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Flag"
        app:layout_constraintTop_toBottomOf="@+id/tilePanel" />


</androidx.constraintlayout.widget.ConstraintLayout>
